--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="colorAccent">#FF4081</color>
     <color name="colorWhite">#fff</color>
     <color name="colorGray">#f2f2f2</color>
+    <color name="colorGreen">#8000</color>
 </resources>
